cravat/websubmit/nocache/websubmit.css
/* ... */
/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.checkbox-container input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.checkbox-container .checkmark:after {
  left: 4px;
  top: 0px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

#submitdiv {
    position: absolute;
    top: 70px;
    width: calc(100% - 10px);
}

#jobdiv {
    position: relative;
    overflow: auto;
}

#input-file {
    width: 0.1px;
    height: 0.1px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
}

#input-file + label {
    font-family: roboto-medium;
    font-size: 13px;
    color: white;
    background-color: #6e593a;
    display: inline-block;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 2px;
    padding-bottom: 2px;
}

#input-file:focus + label, #input-file + label:hover {
    background-color: #94d1eb;
}

#submit-variant-div {
    background-color: #dbd3c8;
    color: black;
}

#submit-variant-div .divbanner {
    background-color: #8c8780;
}

#modchoose {
    background-color: #96b6c6;
	color: white;
    margin-top: 15px;
}

#modchoose .div-header {
	color: white;
}

#modchoose-header {
    display: flex;
    justify-content: space-between;
}

#show-annotator {
    text-align: left;
    flex-grow: 1;
    cursor: pointer;
    /* width: 50%; */
}

#show-annotator:hover {
    text-decoration: underline;
}

#show-package {
    text-align: center;
    flex-grow: 1;
    cursor: pointer;
    /* width: 50%; */
}

#show-package:hover {
    text-decoration: underline;
}

.chevron {
  position: absolute;
  text-align: center;
  padding: 2px;
  margin-top: 16px;
  margin-bottom: 16px;
  height: 2px;
  width: 26px;
  right: 4px;
  bottom: -8px;
}

.chevron:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 51%;
  transform: skew(0deg, 23deg);
}

.chevron:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  width: 50%;
  transform: skew(0deg, -23deg);
}

.chevron1to2:before {
  background-color: #c6b08b;
}

.chevron1to2:after {
  background-color: #5fa3c6;
}

.chevron2to3 {
  position: relative;
  top: -30px;
  left: 329px;
}

.chevron2to3:before {
  background-color: #94d1eb;
}

.chevron2to3:after {
  background-color: #de6342;
}

#addtl-analysis-div {
    background-color: #dbd3c8;
	color: white;
    margin-top: 15px;
}

#addtl-analysis-div .div-header {
	color: white;
}

#addtl-analysis-div .divbanner {
    background-color: #8c8780;
}

#case-control-cohorts + label {
    font-family: roboto-medium;
    font-size: 13px;
    color: white;
    background-color: #6e593a;
    display: inline-block;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 2px;
    padding-bottom: 2px;
    cursor: pointer;
}
#case-control-filename {
    color: black;
}
.help-img {
    margin-left: 1ch;
    height: 1.5em;
    vertical-align: text-bottom;
}

#submit-form {
    overflow-y: scroll;
}

.strikenout {
  text-decoration: line-through;
}

.no-group-member-msg-div {
    position: relative;
    top: 50px;
}

#spinner-div {
    position: fixed;
    top: 63px;
    left: 0;
    width: 100%;
    height: calc(100% - 63px);
    z-index: 9;
    text-align: center;
    background-color: rgba(100, 100, 100, 0.77);
}

/*
#spinner-div img {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
}
*/

#spinner-div-progress-div {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    width: 300px;
    height: 30px;
}

#spinner-div-progress-bar {
    background-color: white;
    box-shadow: 2px 2px 2px 0px black;
    position: absolute;
    top: 0px;
    left: 0px;
    width: 0%;
    height: 100%;
}

#spinner-div-progress-num {
    position: absolute;
    top: calc(50% + 40px);
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    width: 100px;
    height: 30px;
    color: white;
}

#spinner-div-progress-title {
    position: absolute;
    top: calc(50% - 40px);
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    width: 200px;
    height: 30px;
    color: white;
}

#submit-job-button:disabled {
    background-color: gray;
}

#update-remote-spinner-div {
    position: fixed;
    top: 63px;
    left: 0;
    width: 100%;
    height: calc(100% - 63px);
    z-index: 9;
    text-align: center;
    background-color: rgba(100, 100, 100, 0.77);
}

#update-remote-spinner-div-text {
    position: absolute;
    top: calc(50% - 40px);
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    width: 200px;
    height: 30px;
    color: white;
}

#assembly-select-div {
    width: fit-content;
    padding: 2px;
}

.fileaddbutn {
    font-size: 10px;
}

.btn_overlay {
    position: absolute;
    top: 0px;
    left: 0px;
    opacity: 0.4;
    width: 100%;
    height: 100%;
}

#report_generation_div {
    position: fixed;
    top: -1000px;
    right: 1000px;
    background-color: #96b6c6;
    z-index: 1;
    text-align: right;
    border: 1px solid gray;
    padding: 10px;
    box-shadow: 3px 3px 3px gray;
    font-size: 12px;
    display: none;
}

#report_generation_div.show {
    display: block;
}

.submit-annot-tag {
    background-color: #6295b1;
    border-radius: 6px;
    color: white;
    margin-bottom: 3px;
    margin-right: 3px;
    padding: 3px;
    width: 47%;
    white-space: nowrap;
    font-weight: bold;
}
.submit-annot-tag:hover {
    cursor: pointer;
}

.submit-annot-tag.selected {
    background-color:#3175b0;   
}

#jobdivspinnerdiv {
    position: absolute;
    width: 60px;
    height: 60px;
    left: calc(50% - 30px);
    top: calc(50% - 30px);
}
/* ... */

